adds Startup class

--- a/Squeddit/Squeddit/Web.config
+++ b/Squeddit/Squeddit/Web.config
@@ -5,6 +5,10 @@
   -->
 <configuration>
   <appSettings>
+    <add key="ida:ClientId" value="" />
+    <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}" />
+    <add key="ida:Tenant" value="joelguerra.onmicrosoft.com" />
+    <add key="ida:PostLogoutRedirectUri" value="https://localhost:55528/" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -33,7 +37,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect  oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
